Finished day 3 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -17,11 +17,13 @@
       "type": "bar",
       "x": [
         "day 1",
-        "day 2"
+        "day 2",
+        "day 3"
       ],
       "y": [
-        0.0387036,
-        0.3184366
+        0.0274712,
+        0.2652185,
+        0.0237441
       ],
       "name": "Initialization",
       "marker": {
@@ -30,8 +32,9 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.08702106542119557,
-          0.9197990619262661
+          0.04785921238967488,
+          0.09205633377313073,
+          0.015297004451525757
         ]
       }
     },
@@ -39,11 +42,13 @@
       "type": "bar",
       "x": [
         "day 1",
-        "day 2"
+        "day 2",
+        "day 3"
       ],
       "y": [
-        0.0121992,
-        0.0011538
+        0.0092195,
+        0.0011661,
+        0.3077362
       ],
       "name": "Part 1",
       "marker": {
@@ -52,8 +57,9 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.007128068417180074,
-          0.0005571764173042509
+          0.005912479154297296,
+          0.000636836548888332,
+          0.06586380060063345
         ]
       }
     },
@@ -61,11 +67,13 @@
       "type": "bar",
       "x": [
         "day 1",
-        "day 2"
+        "day 2",
+        "day 3"
       ],
       "y": [
-        0.0331284,
-        0.0010568
+        0.0285137,
+        0.0011077,
+        0.3172739
       ],
       "name": "Part 2",
       "marker": {
@@ -74,8 +82,9 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.07836959406198296,
-          0.0008643227175077533
+          0.04747890144379919,
+          0.0005606342033804241,
+          0.07954523071052085
         ]
       }
     }
