Finished day 5 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -18,12 +18,16 @@
       "x": [
         "day 1",
         "day 2",
-        "day 3"
+        "day 3",
+        "day 4",
+        "day 5"
       ],
       "y": [
-        0.0274712,
-        0.2652185,
-        0.0237441
+        0.0232189,
+        0.2458807,
+        0.0247283,
+        0.0912,
+        0.0944092
       ],
       "name": "Initialization",
       "marker": {
@@ -32,9 +36,11 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.04785921238967488,
-          0.09205633377313073,
-          0.015297004451525757
+          0.020248618046424784,
+          0.0682227225893984,
+          0.020199634380602047,
+          0.0286,
+          0.030604905413348385
         ]
       }
     },
@@ -43,12 +49,16 @@
       "x": [
         "day 1",
         "day 2",
-        "day 3"
+        "day 3",
+        "day 4",
+        "day 5"
       ],
       "y": [
-        0.0092195,
-        0.0011661,
-        0.3077362
+        0.0093732,
+        0.0011131,
+        0.3196023,
+        716.76373,
+        0.2327393
       ],
       "name": "Part 1",
       "marker": {
@@ -57,9 +67,11 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.005912479154297296,
-          0.000636836548888332,
-          0.06586380060063345
+          0.0033844736311574373,
+          0.00047619154759402866,
+          0.042109418004883443,
+          8.57105,
+          0.01570465744643925
         ]
       }
     },
@@ -68,12 +80,16 @@
       "x": [
         "day 1",
         "day 2",
-        "day 3"
+        "day 3",
+        "day 4",
+        "day 5"
       ],
       "y": [
-        0.0285137,
-        0.0011077,
-        0.3172739
+        0.0275324,
+        0.0010476,
+        0.3262296,
+        19627.832,
+        1.8732919
       ],
       "name": "Part 2",
       "marker": {
@@ -82,9 +98,11 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.04747890144379919,
-          0.0005606342033804241,
-          0.07954523071052085
+          0.022421033210804527,
+          0.0005485929638630071,
+          0.04125860811806433,
+          56.8473,
+          0.10818398297696369
         ]
       }
     }
