Finished day 6 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -20,14 +20,16 @@
         "day 2",
         "day 3",
         "day 4",
-        "day 5"
+        "day 5",
+        "day 6"
       ],
       "y": [
-        0.0232189,
-        0.2458807,
-        0.0247283,
-        0.0912,
-        0.0944092
+        0.0299853,
+        0.2619015,
+        0.0285346,
+        0.09855,
+        0.1059129,
+        0.8418841
       ],
       "name": "Initialization",
       "marker": {
@@ -36,11 +38,12 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.020248618046424784,
-          0.0682227225893984,
-          0.020199634380602047,
-          0.0286,
-          0.030604905413348385
+          0.043900133871208204,
+          0.10994110208538901,
+          0.05739706562917653,
+          0.01945,
+          0.0458923316425522,
+          0.4122507558479304
         ]
       }
     },
@@ -51,14 +54,16 @@
         "day 2",
         "day 3",
         "day 4",
-        "day 5"
+        "day 5",
+        "day 6"
       ],
       "y": [
-        0.0093732,
-        0.0011131,
-        0.3196023,
-        716.76373,
-        0.2327393
+        0.0102128,
+        0.0011321,
+        0.314767,
+        756.4942,
+        0.2627818,
+        29.691723
       ],
       "name": "Part 1",
       "marker": {
@@ -67,11 +72,12 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.0033844736311574373,
-          0.00047619154759402866,
-          0.042109418004883443,
-          8.57105,
-          0.01570465744643925
+          0.005263348379121418,
+          0.000631600815388952,
+          0.09414909787671867,
+          8.9524,
+          0.11504942932826746,
+          3.3145650913939124
         ]
       }
     },
@@ -82,14 +88,16 @@
         "day 2",
         "day 3",
         "day 4",
-        "day 5"
+        "day 5",
+        "day 6"
       ],
       "y": [
-        0.0275324,
-        0.0010476,
-        0.3262296,
-        19627.832,
-        1.8732919
+        0.0342423,
+        0.0009897,
+        0.3196892,
+        20778.703,
+        2.021841,
+        3.9947224
       ],
       "name": "Part 2",
       "marker": {
@@ -98,11 +106,12 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.022421033210804527,
-          0.0005485929638630071,
-          0.04125860811806433,
-          56.8473,
-          0.10818398297696369
+          0.08119355307356613,
+          0.00030196673657872,
+          0.07468651741351989,
+          4.4016,
+          0.4995662241593103,
+          0.6375167584450154
         ]
       }
     }
