Finished day 7 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -21,15 +21,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        0.0299853,
-        0.2619015,
-        0.0285346,
-        0.09855,
-        0.1059129,
-        0.8418841
+        0.0325799,
+        0.3260201,
+        0.0355887,
+        0.1098,
+        0.1045074,
+        0.9724075,
+        0.22202
       ],
       "name": "Initialization",
       "marker": {
@@ -38,12 +40,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.043900133871208204,
-          0.10994110208538901,
-          0.05739706562917653,
-          0.01945,
-          0.0458923316425522,
-          0.4122507558479304
+          0.04196343844336407,
+          0.7118692388676372,
+          0.024844418735603394,
+          0.0001,
+          0.04218478902685184,
+          0.4363767986428128,
+          0.04417214733290651
         ]
       }
     },
@@ -55,15 +58,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        0.0102128,
-        0.0011321,
-        0.314767,
-        756.4942,
-        0.2627818,
-        29.691723
+        0.0168686,
+        0.0013953,
+        0.3914356,
+        769.02124,
+        0.250779,
+        29.150166,
+        22.572863
       ],
       "name": "Part 1",
       "marker": {
@@ -72,12 +77,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.005263348379121418,
-          0.000631600815388952,
-          0.09414909787671867,
-          8.9524,
-          0.11504942932826746,
-          3.3145650913939124
+          0.04332810674423702,
+          0.0005711986607127131,
+          0.09438852595861429,
+          15.19825,
+          0.06187858611022059,
+          2.4899832501193657,
+          2.4386707242302577
         ]
       }
     },
@@ -89,15 +95,17 @@
         "day 3",
         "day 4",
         "day 5",
-        "day 6"
+        "day 6",
+        "day 7"
       ],
       "y": [
-        0.0342423,
-        0.0009897,
-        0.3196892,
-        20778.703,
-        2.021841,
-        3.9947224
+        0.0350529,
+        0.0013038,
+        0.4007704,
+        20755.89,
+        1.9913363,
+        3.9450495,
+        22.31676
       ],
       "name": "Part 2",
       "marker": {
@@ -106,12 +114,13 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.08119355307356613,
-          0.00030196673657872,
-          0.07468651741351989,
-          4.4016,
-          0.4995662241593103,
-          0.6375167584450154
+          0.03544053994495567,
+          0.0004310052899907387,
+          0.09937909379663307,
+          69.7805,
+          0.39978567482469834,
+          0.6008887991132384,
+          2.630364310075511
         ]
       }
     }
