Finished day 8 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -22,16 +22,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        0.0325799,
-        0.3260201,
-        0.0355887,
-        0.1098,
-        0.1045074,
-        0.9724075,
-        0.22202
+        0.0277619,
+        0.2485183,
+        0.0232527,
+        0.1246,
+        0.1019847,
+        0.9599155,
+        0.2187725,
+        0.0596172
       ],
       "name": "Initialization",
       "marker": {
@@ -40,13 +42,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.04196343844336407,
-          0.7118692388676372,
-          0.024844418735603394,
-          0.0001,
-          0.04218478902685184,
-          0.4363767986428128,
-          0.04417214733290651
+          0.016942270166362003,
+          0.0609493093899349,
+          0.01751930000627877,
+          0.0134,
+          0.029212694773163236,
+          0.5786515317613447,
+          0.05276616713150577,
+          0.045573665028829896
         ]
       }
     },
@@ -59,16 +62,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        0.0168686,
-        0.0013953,
-        0.3914356,
-        769.02124,
-        0.250779,
-        29.150166,
-        22.572863
+        0.0125493,
+        0.0010727,
+        0.3119237,
+        748.4239,
+        0.2483069,
+        29.571157,
+        21.870256,
+        0.0050035
       ],
       "name": "Part 1",
       "marker": {
@@ -77,13 +82,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.04332810674423702,
-          0.0005711986607127131,
-          0.09438852595861429,
-          15.19825,
-          0.06187858611022059,
-          2.4899832501193657,
-          2.4386707242302577
+          0.007281508051907929,
+          0.00036362715795165674,
+          0.07987831425555998,
+          4.3697,
+          0.06081441590930553,
+          3.1804496388932235,
+          2.5754768925715044,
+          0.01639944992217722
         ]
       }
     },
@@ -96,16 +102,18 @@
         "day 4",
         "day 5",
         "day 6",
-        "day 7"
+        "day 7",
+        "day 8"
       ],
       "y": [
-        0.0350529,
-        0.0013038,
-        0.4007704,
-        20755.89,
-        1.9913363,
-        3.9450495,
-        22.31676
+        0.0266679,
+        0.0010246,
+        0.3173262,
+        20911.18,
+        1.9868169,
+        4.110398,
+        21.477224,
+        0.0069049
       ],
       "name": "Part 2",
       "marker": {
@@ -114,13 +122,14 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.03544053994495567,
-          0.0004310052899907387,
-          0.09937909379663307,
-          69.7805,
-          0.39978567482469834,
-          0.6008887991132384,
-          2.630364310075511
+          0.007931636627455899,
+          0.000383503376777832,
+          0.0797126675852716,
+          86.38385,
+          0.4603038726584753,
+          0.6857790982495757,
+          2.023056491839761,
+          0.01914306730881974
         ]
       }
     }
