--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -23,17 +23,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        0.0277619,
-        0.2485183,
-        0.0232527,
-        0.1246,
-        0.1019847,
-        0.9599155,
-        0.2187725,
-        0.0596172
+        0.0532567,
+        0.2618444,
+        0.0249624,
+        0.155,
+        0.1037961,
+        1.215447,
+        0.221923,
+        0.0612574,
+        0.1866984
       ],
       "name": "Initialization",
       "marker": {
@@ -42,14 +44,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.016942270166362003,
-          0.0609493093899349,
-          0.01751930000627877,
-          0.0134,
-          0.029212694773163236,
-          0.5786515317613447,
-          0.05276616713150577,
-          0.045573665028829896
+          0.5992679942522461,
+          0.16652661147288164,
+          0.023145855919364917,
+          0.073,
+          0.04189474686389693,
+          0.4892489335614342,
+          0.038222105789712794,
+          0.05225811788841999,
+          0.027575473838902572
         ]
       }
     },
@@ -63,17 +66,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        0.0125493,
-        0.0010727,
-        0.3119237,
-        748.4239,
-        0.2483069,
-        29.571157,
-        21.870256,
-        0.0050035
+        0.020539,
+        0.0013016,
+        0.2951477,
+        765.08276,
+        0.2386056,
+        29.96527,
+        21.379236,
+        0.0049036,
+        91.08652
       ],
       "name": "Part 1",
       "marker": {
@@ -82,14 +87,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.007281508051907929,
-          0.00036362715795165674,
-          0.07987831425555998,
-          4.3697,
-          0.06081441590930553,
-          3.1804496388932235,
-          2.5754768925715044,
-          0.01639944992217722
+          0.12256999151097274,
+          0.0008865649665986174,
+          0.07522802506187443,
+          1.21875,
+          0.04667848849995039,
+          3.2993398693859555,
+          2.2204170560574896,
+          0.0042553245516646675,
+          4.966272779318253
         ]
       }
     },
@@ -103,17 +109,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        0.0266679,
-        0.0010246,
-        0.3173262,
-        20911.18,
-        1.9868169,
-        4.110398,
-        21.477224,
-        0.0069049
+        0.0488371,
+        0.0011637,
+        0.3011816,
+        20820.299,
+        1.8630133,
+        4.317191,
+        21.30148,
+        0.0060492,
+        0.1136631
       ],
       "name": "Part 2",
       "marker": {
@@ -122,14 +130,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.007931636627455899,
-          0.000383503376777832,
-          0.0797126675852716,
-          86.38385,
-          0.4603038726584753,
-          0.6857790982495757,
-          2.023056491839761,
-          0.01914306730881974
+          0.41401023315081237,
+          0.0005258824108106328,
+          0.06373396521039616,
+          63.35685,
+          0.3651043908159833,
+          2.2260508755909094,
+          2.1202761140613293,
+          0.0027848086756544,
+          0.025116034885905043
         ]
       }
     }
