Finished day 10 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -24,18 +24,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        0.0532567,
-        0.2618444,
-        0.0249624,
-        0.155,
-        0.1037961,
-        1.215447,
-        0.221923,
-        0.0612574,
-        0.1866984
+        0.0378042,
+        0.2774046,
+        0.0256287,
+        0.1337,
+        0.1050269,
+        0.6925805,
+        0.2216,
+        0.0598547,
+        0.187632,
+        0.102808
       ],
       "name": "Initialization",
       "marker": {
@@ -44,15 +46,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.5992679942522461,
-          0.16652661147288164,
-          0.023145855919364917,
-          0.073,
-          0.04189474686389693,
-          0.4892489335614342,
-          0.038222105789712794,
-          0.05225811788841999,
-          0.027575473838902572
+          0.07976417430375624,
+          0.11374967858785355,
+          0.017475092741098673,
+          0.0273,
+          0.03860691915175313,
+          0.45875831585896,
+          0.05829055412328828,
+          0.048524474627861726,
+          0.03536487771787145,
+          0.03238227194006002
         ]
       }
     },
@@ -67,18 +70,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        0.020539,
-        0.0013016,
-        0.2951477,
-        765.08276,
-        0.2386056,
-        29.96527,
-        21.379236,
-        0.0049036,
-        91.08652
+        0.0175391,
+        0.0012528,
+        0.3356902,
+        756.97705,
+        0.2555935,
+        29.732908,
+        22.29019,
+        0.0044553,
+        90.26053,
+        1.557746
       ],
       "name": "Part 1",
       "marker": {
@@ -87,15 +92,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.12256999151097274,
-          0.0008865649665986174,
-          0.07522802506187443,
-          1.21875,
-          0.04667848849995039,
-          3.2993398693859555,
-          2.2204170560574896,
-          0.0042553245516646675,
-          4.966272779318253
+          0.05067750212066498,
+          0.001025432669657059,
+          0.11101097010638186,
+          13.03445,
+          0.06203729320134771,
+          3.3301649920053156,
+          2.2818506748995957,
+          0.005818447551538113,
+          4.69064884993227,
+          0.37722947536479734
         ]
       }
     },
@@ -110,18 +116,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        0.0488371,
-        0.0011637,
-        0.3011816,
-        20820.299,
-        1.8630133,
-        4.317191,
-        21.30148,
-        0.0060492,
-        0.1136631
+        0.0500474,
+        0.0010713,
+        0.3377223,
+        20735.164,
+        1.9563876,
+        3.8291564,
+        22.6324,
+        0.0060769,
+        0.113465,
+        24.819164
       ],
       "name": "Part 2",
       "marker": {
@@ -130,15 +138,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.41401023315081237,
-          0.0005258824108106328,
-          0.06373396521039616,
-          63.35685,
-          0.3651043908159833,
-          2.2260508755909094,
-          2.1202761140613293,
-          0.0027848086756544,
-          0.025116034885905043
+          0.5094715682677889,
+          0.0005492233698596631,
+          0.11648414507009093,
+          43.017,
+          0.4076893630771349,
+          0.8254106125788276,
+          2.885439200208523,
+          0.005268919850405765,
+          0.015526495902166721,
+          3.787677138524888
         ]
       }
     }
