Finished day 11 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -25,19 +25,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        0.0378042,
-        0.2774046,
-        0.0256287,
-        0.1337,
-        0.1050269,
-        0.6925805,
-        0.2216,
-        0.0598547,
-        0.187632,
-        0.102808
+        0.0332802,
+        0.2827785,
+        0.0258507,
+        0.20185,
+        0.1069913,
+        0.929704,
+        0.2165725,
+        0.0571293,
+        0.189519,
+        0.091738,
+        0.048121
       ],
       "name": "Initialization",
       "marker": {
@@ -46,16 +48,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.07976417430375624,
-          0.11374967858785355,
-          0.017475092741098673,
-          0.0273,
-          0.03860691915175313,
-          0.45875831585896,
-          0.05829055412328828,
-          0.048524474627861726,
-          0.03536487771787145,
-          0.03238227194006002
+          0.09807936647409556,
+          0.15671954966675264,
+          0.04930969113176437,
+          0.08505,
+          0.04301487712768694,
+          0.5949780431108358,
+          0.046741393793403294,
+          0.05433421474089787,
+          0.0274721411433474,
+          0.04267092166804,
+          0.02157485710265544
         ]
       }
     },
@@ -71,19 +74,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        0.0175391,
-        0.0012528,
-        0.3356902,
-        756.97705,
-        0.2555935,
-        29.732908,
-        22.29019,
-        0.0044553,
-        90.26053,
-        1.557746
+        0.0145517,
+        0.0012831,
+        0.2997851,
+        755.28687,
+        0.2490859,
+        29.866646,
+        21.025507,
+        0.0041475,
+        91.329185,
+        1.548299,
+        14.163578
       ],
       "name": "Part 1",
       "marker": {
@@ -92,16 +97,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.05067750212066498,
-          0.001025432669657059,
-          0.11101097010638186,
-          13.03445,
-          0.06203729320134771,
-          3.3301649920053156,
-          2.2818506748995957,
-          0.005818447551538113,
-          4.69064884993227,
-          0.37722947536479734
+          0.027544978800318563,
+          0.001089203557651188,
+          0.10637139393648076,
+          19.03915,
+          0.059255647926505714,
+          3.7023910180698114,
+          2.3523744852581934,
+          0.0037059457295000537,
+          7.0035935878218325,
+          0.36105820984849485,
+          1.8591423190051901
         ]
       }
     },
@@ -117,19 +123,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        0.0500474,
-        0.0010713,
-        0.3377223,
-        20735.164,
-        1.9563876,
-        3.8291564,
-        22.6324,
-        0.0060769,
-        0.113465,
-        24.819164
+        0.037852,
+        0.0010715,
+        0.3053407,
+        20629.777,
+        2.0149405,
+        3.914035,
+        20.818869,
+        0.0056094,
+        0.115333,
+        23.912664,
+        36.052692
       ],
       "name": "Part 2",
       "marker": {
@@ -138,16 +146,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.5094715682677889,
-          0.0005492233698596631,
-          0.11648414507009093,
-          43.017,
-          0.4076893630771349,
-          0.8254106125788276,
-          2.885439200208523,
-          0.005268919850405765,
-          0.015526495902166721,
-          3.787677138524888
+          0.24197565409767824,
+          0.0004379243656157953,
+          0.08242360580264611,
+          95.8369,
+          0.44616405846710677,
+          0.7951696008871315,
+          2.0016354413176782,
+          0.004873441457532864,
+          0.023095666498284886,
+          3.075145044075811,
+          4.734297834528256
         ]
       }
     }
