Finished day 12 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -26,20 +26,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        0.0332802,
-        0.2827785,
-        0.0258507,
-        0.20185,
-        0.1069913,
-        0.929704,
-        0.2165725,
-        0.0571293,
-        0.189519,
-        0.091738,
-        0.048121
+        0.0317656,
+        0.3074323,
+        0.0293788,
+        3.6663,
+        0.1272535,
+        1.4507124,
+        0.259529,
+        0.0873167,
+        0.236667,
+        0.187177,
+        0.126556,
+        0.464736
       ],
       "name": "Initialization",
       "marker": {
@@ -48,17 +50,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.09807936647409556,
-          0.15671954966675264,
-          0.04930969113176437,
-          0.08505,
-          0.04301487712768694,
-          0.5949780431108358,
-          0.046741393793403294,
-          0.05433421474089787,
-          0.0274721411433474,
-          0.04267092166804,
-          0.02157485710265544
+          0.2555202410311953,
+          0.28140831374838543,
+          0.1328780280202868,
+          3.5428,
+          0.5066095992850412,
+          0.6300573674624795,
+          0.29942994349096147,
+          0.40529474680917116,
+          0.5078977349929821,
+          0.7339991189170446,
+          0.6341778041401311,
+          0.2250444278448145
         ]
       }
     },
@@ -75,20 +78,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        0.0145517,
-        0.0012831,
-        0.2997851,
-        755.28687,
-        0.2490859,
-        29.866646,
-        21.025507,
-        0.0041475,
-        91.329185,
-        1.548299,
-        14.163578
+        0.0105638,
+        0.0014016,
+        0.3281536,
+        768.3258,
+        0.2646515,
+        31.468403,
+        22.839542,
+        0.0057759,
+        96.89858,
+        1.689197,
+        16.88509,
+        1.709673
       ],
       "name": "Part 1",
       "marker": {
@@ -97,17 +102,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.027544978800318563,
-          0.001089203557651188,
-          0.10637139393648076,
-          19.03915,
-          0.059255647926505714,
-          3.7023910180698114,
-          2.3523744852581934,
-          0.0037059457295000537,
-          7.0035935878218325,
-          0.36105820984849485,
-          1.8591423190051901
+          0.004183478165354756,
+          0.001219769420833295,
+          0.0849598088924405,
+          17.0071,
+          0.07551502365589237,
+          3.5848353918542735,
+          2.571136680313013,
+          0.00447001892501583,
+          5.410486962889754,
+          0.5956160928744292,
+          2.3651772995652984,
+          0.47817043171969625
         ]
       }
     },
@@ -124,20 +130,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        0.037852,
-        0.0010715,
-        0.3053407,
-        20629.777,
-        2.0149405,
-        3.914035,
-        20.818869,
-        0.0056094,
-        0.115333,
-        23.912664,
-        36.052692
+        0.0269612,
+        0.0014137,
+        0.3358467,
+        21161.365,
+        2.1111078,
+        4.8988743,
+        22.41485,
+        0.0085186,
+        0.111332,
+        28.605452,
+        42.32051,
+        1.451374
       ],
       "name": "Part 2",
       "marker": {
@@ -146,17 +154,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.24197565409767824,
-          0.0004379243656157953,
-          0.08242360580264611,
-          95.8369,
-          0.44616405846710677,
-          0.7951696008871315,
-          2.0016354413176782,
-          0.004873441457532864,
-          0.023095666498284886,
-          3.075145044075811,
-          4.734297834528256
+          0.014009812795323155,
+          0.0069063175650993704,
+          0.09454769489051543,
+          64.3062,
+          0.5263145963006917,
+          0.8087323286475859,
+          2.2606522440879755,
+          0.06793186066964418,
+          0.020591507375614843,
+          3.0917625787074905,
+          4.279268849354518,
+          0.29782321555580543
         ]
       }
     }
