Finished day 13 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -27,21 +27,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        0.0317656,
-        0.3074323,
-        0.0293788,
-        3.6663,
-        0.1272535,
-        1.4507124,
-        0.259529,
-        0.0873167,
-        0.236667,
-        0.187177,
-        0.126556,
-        0.464736
+        0.0328935,
+        0.3211239,
+        0.0261687,
+        0.1201,
+        0.1114424,
+        1.151217,
+        0.229878,
+        0.084929,
+        0.184656,
+        0.114185,
+        0.061172,
+        0.456383,
+        0.5053
       ],
       "name": "Initialization",
       "marker": {
@@ -50,18 +52,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.2555202410311953,
-          0.28140831374838543,
-          0.1328780280202868,
-          3.5428,
-          0.5066095992850412,
-          0.6300573674624795,
-          0.29942994349096147,
-          0.40529474680917116,
-          0.5078977349929821,
-          0.7339991189170446,
-          0.6341778041401311,
-          0.2250444278448145
+          0.07208365312433862,
+          0.16019648622485444,
+          0.01836708714821158,
+          0.0093,
+          0.042596922215578,
+          0.5071637179560474,
+          0.0446926483439951,
+          0.6582632915323479,
+          0.020006670487614894,
+          0.02197288044385624,
+          0.025518240848459724,
+          0.15590961359390257,
+          0.8002981581885591
         ]
       }
     },
@@ -79,21 +82,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        0.0105638,
-        0.0014016,
-        0.3281536,
-        768.3258,
-        0.2646515,
-        31.468403,
-        22.839542,
-        0.0057759,
-        96.89858,
-        1.689197,
-        16.88509,
-        1.709673
+        0.0193585,
+        0.0013359,
+        0.3475399,
+        762.3129,
+        0.2520346,
+        30.627167,
+        24.947495,
+        0.0060046,
+        91.86842,
+        1.55083,
+        14.905048,
+        1.772843,
+        141.59251
       ],
       "name": "Part 1",
       "marker": {
@@ -102,18 +107,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.004183478165354756,
-          0.001219769420833295,
-          0.0849598088924405,
-          17.0071,
-          0.07551502365589237,
-          3.5848353918542735,
-          2.571136680313013,
-          0.00447001892501583,
-          5.410486962889754,
-          0.5956160928744292,
-          2.3651772995652984,
-          0.47817043171969625
+          0.13294843958373584,
+          0.0010489333582263522,
+          0.10065858978740948,
+          8.4968,
+          0.06764694407613693,
+          3.216202655686359,
+          2.1238723891430054,
+          0.01928220938689334,
+          4.912546508316327,
+          0.3626469736534416,
+          1.9236101831961703,
+          0.44419528278787457,
+          6.062526441806254
         ]
       }
     },
@@ -131,21 +137,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        0.0269612,
-        0.0014137,
-        0.3358467,
-        21161.365,
-        2.1111078,
-        4.8988743,
-        22.41485,
-        0.0085186,
-        0.111332,
-        28.605452,
-        42.32051,
-        1.451374
+        0.0391667,
+        0.0011568,
+        0.3519175,
+        21006.092,
+        1.9824557,
+        4.600702,
+        24.838493,
+        0.0074726,
+        0.113648,
+        26.394733,
+        37.7743,
+        1.516795,
+        1571.3727
       ],
       "name": "Part 2",
       "marker": {
@@ -154,18 +162,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.014009812795323155,
-          0.0069063175650993704,
-          0.09454769489051543,
-          64.3062,
-          0.5263145963006917,
-          0.8087323286475859,
-          2.2606522440879755,
-          0.06793186066964418,
-          0.020591507375614843,
-          3.0917625787074905,
-          4.279268849354518,
-          0.29782321555580543
+          0.26230952685922454,
+          0.0007002669205381679,
+          0.08814590928539921,
+          81.88175,
+          0.47189815800393853,
+          0.5695584460755532,
+          2.049056030955169,
+          0.005291185995596826,
+          0.02245790052520496,
+          2.2296402456548887,
+          4.824868359965473,
+          0.3958641333525936,
+          18.277553905161927
         ]
       }
     }
