Finished day 14 of 2015 in Rust

--- a/2015_rust/images/runtimes.html
+++ b/2015_rust/images/runtimes.html
@@ -28,22 +28,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        0.0328935,
-        0.3211239,
-        0.0261687,
-        0.1201,
-        0.1114424,
-        1.151217,
-        0.229878,
-        0.084929,
-        0.184656,
-        0.114185,
-        0.061172,
-        0.456383,
-        0.5053
+        0.027512,
+        0.266176,
+        0.0275543,
+        0.0745,
+        0.110848,
+        1.2682515,
+        0.222728,
+        0.0599307,
+        0.256709,
+        0.136069,
+        0.084817,
+        0.427476,
+        0.25586,
+        0.095603
       ],
       "name": "Initialization",
       "marker": {
@@ -52,19 +54,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.07208365312433862,
-          0.16019648622485444,
-          0.01836708714821158,
-          0.0093,
-          0.042596922215578,
-          0.5071637179560474,
-          0.0446926483439951,
-          0.6582632915323479,
-          0.020006670487614894,
-          0.02197288044385624,
-          0.025518240848459724,
-          0.15590961359390257,
-          0.8002981581885591
+          0.052008201430158975,
+          0.09488200779916077,
+          0.028024554974343443,
+          0.0068,
+          0.04155369653833456,
+          0.5231981132398613,
+          0.04730593108691552,
+          0.05425215928891679,
+          0.22870454000522117,
+          0.058058280537749425,
+          0.04582432553786257,
+          0.11146569797027255,
+          0.027090891458200483,
+          0.36903403270023705
         ]
       }
     },
@@ -83,22 +86,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        0.0193585,
-        0.0013359,
-        0.3475399,
-        762.3129,
-        0.2520346,
-        30.627167,
-        24.947495,
-        0.0060046,
-        91.86842,
-        1.55083,
-        14.905048,
-        1.772843,
-        141.59251
+        0.0097338,
+        0.0011539,
+        0.3403,
+        763.0406,
+        0.2563674,
+        30.852436,
+        22.484196,
+        0.0039921,
+        95.8039,
+        1.940398,
+        15.691806,
+        1.643894,
+        144.0564,
+        0.00006
       ],
       "name": "Part 1",
       "marker": {
@@ -107,19 +112,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.13294843958373584,
-          0.0010489333582263522,
-          0.10065858978740948,
-          8.4968,
-          0.06764694407613693,
-          3.216202655686359,
-          2.1238723891430054,
-          0.01928220938689334,
-          4.912546508316327,
-          0.3626469736534416,
-          1.9236101831961703,
-          0.44419528278787457,
-          6.062526441806254
+          0.00580831624139045,
+          0.0004851028653801162,
+          0.10333569005914656,
+          1.6122,
+          0.07762199828167264,
+          3.3742869944672798,
+          2.570000173051359,
+          0.004073863963119032,
+          6.289349920737039,
+          0.5669361052146878,
+          1.7389465151533559,
+          0.36293378867776976,
+          7.437729558064073,
+          0.000058309518948453004
         ]
       }
     },
@@ -138,22 +144,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        0.0391667,
-        0.0011568,
-        0.3519175,
-        21006.092,
-        1.9824557,
-        4.600702,
-        24.838493,
-        0.0074726,
-        0.113648,
-        26.394733,
-        37.7743,
-        1.516795,
-        1571.3727
+        0.0313599,
+        0.0010859,
+        0.3451349,
+        21163.357,
+        2.0378695,
+        4.7003984,
+        22.200777,
+        0.0061296,
+        0.113059,
+        28.535177,
+        40.0544,
+        1.463219,
+        1621.7358,
+        5.911019
       ],
       "name": "Part 2",
       "marker": {
@@ -162,19 +170,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.26230952685922454,
-          0.0007002669205381679,
-          0.08814590928539921,
-          81.88175,
-          0.47189815800393853,
-          0.5695584460755532,
-          2.049056030955169,
-          0.005291185995596826,
-          0.02245790052520496,
-          2.2296402456548887,
-          4.824868359965473,
-          0.3958641333525936,
-          18.277553905161927
+          0.06562679698103521,
+          0.00047490124236518387,
+          0.09087723803015796,
+          38.88405,
+          0.5110603721515101,
+          1.409678157895534,
+          2.108191731393516,
+          0.0055176828324940645,
+          0.022239123611329653,
+          4.624066500334526,
+          3.4654975130706682,
+          0.395070680940765,
+          10.939411559786935,
+          0.7026557899419879
         ]
       }
     }
